# bonfig

./: .gitignore  LICENSE.txt  Pipfile  README.md  bonfig.py  donfig.py  example.ini  example.py  example_out.ini  out.ini  pyproject.toml  setup.cfg  setup.py  t.py  tests.py  tox.ini
bonfig/: __init__.py  core.py  fields.py
bonfig.egg-info/: PKG-INFO  SOURCES.txt
bonfig/fields/: __init__.py  base.py  env.py  field.py  ini.py  json.py
bonfig/stores/: base.py  ini.py  json.py
docs/: api.html  cheatsheet.html  eg_bonfig.html  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  searchindex.js
docs/.doctrees/: api.doctree  cheatsheet.doctree  environment.pickle  index.doctree  quickstart.doctree
docs/_sources/: cheatsheet.rst.txt  index.rst.txt
docs/source/: api.rst  cheatsheet.rst  conf.py  examples.rst  index.rst  quickstart.rst
examples/: bonfig.ini  bonfig.json  custom_fields.py  eg_bonfig.html  eg_bonfig.py  eg_bonfig.rst  examples.py  in.ini  out.ini  with_configparser.py
